Set maven memory via env variable