@@ -268,9 +268,9 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.18.1</version>
                     <configuration>
-                        <forkCount>1</forkCount>
+                        <forkCount>0</forkCount>
                         <reuseForks>true</reuseForks>
-                        <argLine>-Xmx2048M -Ddtype=float -Dorg.nd4j.parallel.threads=1</argLine>
+                        <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m -Ddtype=float -Dorg.nd4j.parallel.threads=1</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
